# messenger

server/: .gitignore  Cargo.toml
server/src/: main.rs
server/src/application/: error.rs  mod.rs
server/src/application/dto/: message.rs
server/src/application/mutation/: mod.rs  send_message.rs
server/src/application/query/: list_messages.rs  mod.rs
server/src/domain/entity/: message.rs
