[package]
name = "messenger-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rusqlite = { version = "0.25", features = ["uuid", "chrono"] }